--- a/source/Data_Preprocessing1.ipynb
+++ b/source/Data_Preprocessing1.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -15,6 +22,13 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data"
    ]
   },
   {
@@ -398,8 +412,16 @@
     }
    ],
    "source": [
+    "# Reading Data from the given csv file \n",
     "data = pd.read_csv('agaricus-lepiota.data', names = ['classes', 'cap-shape', 'cap-surface', 'cap-color', 'bruises?', 'odor', 'gill-attachment', 'gill-spacing', 'gill-size', 'gill-color', 'stalk-shape', 'stalk-root', 'stalk-surface-above-ring', 'stalk-surface-below-ring', 'stalk-color-above-ring', 'stalk-color-below-ring', 'veil-type', 'veil-color', 'ring-number', 'ring-type', 'spore-print-color', 'population', 'habitat'], na_values = \"?\")\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploratory Data Analysis"
    ]
   },
   {
@@ -633,7 +655,15 @@
     }
    ],
    "source": [
+    "#description of the data in the DataFrame\n",
     "data.describe().T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking for null values"
    ]
   },
   {
@@ -683,7 +713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### There are 2480 NaN values present in stalk-root feature it is approximately 30%.\n"
+    "#### There are 2480 NaN values present in stalk-root feature it is approximately 30%. Exluding these features altogther will result in decrease in accuracy. Hence handling such values by replacing them with most frequnet value in stalk-root"
    ]
   },
   {
@@ -707,6 +737,7 @@
     }
    ],
    "source": [
+    "#checking for which value of stalk-root is most frequent\n",
     "data['stalk-root'].value_counts()"
    ]
   },
@@ -731,6 +762,7 @@
     }
    ],
    "source": [
+    "#relacing NaN/ ? values with 'b'\n",
     "data['stalk-root'] = data['stalk-root'].fillna('b')\n",
     "data['stalk-root'].value_counts()"
    ]
@@ -775,6 +807,7 @@
     }
    ],
    "source": [
+    "#checking again for any null values\n",
     "data.isnull().sum()"
    ]
   },
@@ -784,7 +817,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Renaming classes\n",
+    "# Renaming classes p and e as 0 and 1 respectively\n",
     "data['classes'] =data['classes'].replace('p','0')\n",
     "data['classes'] =data['classes'].replace('e','1')"
    ]
@@ -795,6 +828,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Transforming the categorical variable into a set of binary variables\n",
     "data = pd.get_dummies(data)"
    ]
   },
@@ -1183,12 +1217,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train-Test-Val split into 90:10:10 ratio"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "train, validate, test = np.split(data.sample(frac=1, random_state= 42), [int(.8*len(data)), int(.9*len(data))])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving train, test , validaion data into files"
    ]
   },
   {
