--- a/source/Data_Preprocessing1.ipynb
+++ b/source/Data_Preprocessing1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -406,13 +406,13 @@
        "[8124 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reading Data from the given csv file \n",
+    "# Reading Data from the given agaricus-lepiota.data file \n",
     "data = pd.read_csv('agaricus-lepiota.data', names = ['classes', 'cap-shape', 'cap-surface', 'cap-color', 'bruises?', 'odor', 'gill-attachment', 'gill-spacing', 'gill-size', 'gill-color', 'stalk-shape', 'stalk-root', 'stalk-surface-above-ring', 'stalk-surface-below-ring', 'stalk-color-above-ring', 'stalk-color-below-ring', 'veil-type', 'veil-color', 'ring-number', 'ring-type', 'spore-print-color', 'population', 'habitat'], na_values = \"?\")\n",
     "data"
    ]
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "habitat                   8124      7   d  3148"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "Name: stalk-root, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,33 +743,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "b    6256\n",
-       "e    1120\n",
-       "c     556\n",
-       "r     192\n",
-       "Name: stalk-root, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b    0.669029\n",
+      "e    0.198441\n",
+      "c    0.098512\n",
+      "r    0.034018\n",
+      "Name: stalk-root, dtype: float64 \n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "#relacing NaN/ ? values with 'b'\n",
-    "data['stalk-root'] = data['stalk-root'].fillna('b')\n",
-    "data['stalk-root'].value_counts()"
+    "# percentage of existing categorical values for stalk-root:\n",
+    "print(data['stalk-root'].value_counts(normalize=True), '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "classes  stalk-root\n",
+      "e        b             0.550459\n",
+      "         e             0.247706\n",
+      "         c             0.146789\n",
+      "         r             0.055046\n",
+      "p        b             0.860853\n",
+      "         e             0.118738\n",
+      "         c             0.020408\n",
+      "Name: stalk-root, dtype: float64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#value_counts of column data['stalk-root'], if grouped by the 'class' column.\n",
+    "print(data.groupby('classes')['stalk-root'].value_counts(normalize=True), '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #relacing NaN/ ? values by grouping them by classes and then filly in \n",
+    "# random values in such a way that the ratio of categorical values remains same as in the original dataset.\n",
+    "for _, gdata in data.groupby('classes')['stalk-root']:\n",
+    "    value_count = gdata.value_counts(normalize=True)\n",
+    "    data.loc[gdata.loc[gdata.isna()].index, 'stalk-root'] = (\n",
+    "        np.random.choice(value_count.index, gdata.isna().sum(), p=value_count)\n",
+    "    )\n",
+    "\n",
+    "# #relacing NaN/ ? values with 'b'\n",
+    "# data['stalk-root'] = data['stalk-root'].fillna('b')\n",
+    "# data['stalk-root'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "classes  stalk-root\n",
+      "e        b             0.553470\n",
+      "         e             0.242871\n",
+      "         c             0.147101\n",
+      "         r             0.056559\n",
+      "p        b             0.867467\n",
+      "         e             0.110317\n",
+      "         c             0.022217\n",
+      "Name: stalk-root, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking if the ratio is same after filling in NaN value\n",
+    "print(data.groupby('classes')['stalk-root'].value_counts(normalize=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +870,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1276,7 @@
        "[8124 rows x 118 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,12 +1289,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train-Test-Val split into 90:10:10 ratio"
+    "### Train-Test-Val split into 80:10:10 ratio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,19 +1305,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Saving train, test , validaion data into files"
+    "### Saving train, test , validation data into files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('training.txt',index= False, header=False ,encoding='utf-8')\n",
-    "validate.to_csv('val.txt',index= False, header=False, encoding='utf-8')\n",
-    "test.to_csv('testing.txt', index= False,header=False, encoding='utf-8')\n"
+    "train.to_csv('training.txt',index= False, header=False)\n",
+    "validate.to_csv('val.txt',index= False, header=False)\n",
+    "test.to_csv('testing.txt', index= False,header=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
