--- a/source/Data_Preprocessing1.ipynb
+++ b/source/Data_Preprocessing1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "[8124 rows x 23 columns]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "habitat                   8124      7   d  3148"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,12 +713,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### There are 2480 NaN values present in stalk-root feature it is approximately 30%. Exluding these features altogther will result in decrease in accuracy. Hence handling such values by replacing them with most frequnet value in stalk-root"
+    "#### There are 2480 NaN values present in stalk-root feature it is approximately 30%. Excluding these features altogther will result in decrease in accuracy. Hence handling such values by replacing them based upon the percentage of existing categorical values, grouped by 'classes' column. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "Name: stalk-root, dtype: int64"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -820,13 +820,13 @@
      "output_type": "stream",
      "text": [
       "classes  stalk-root\n",
-      "e        b             0.553470\n",
-      "         e             0.242871\n",
-      "         c             0.147101\n",
-      "         r             0.056559\n",
-      "p        b             0.867467\n",
-      "         e             0.110317\n",
-      "         c             0.022217\n",
+      "e        b             0.550143\n",
+      "         e             0.249762\n",
+      "         c             0.144724\n",
+      "         r             0.055371\n",
+      "p        b             0.862870\n",
+      "         e             0.117722\n",
+      "         c             0.019408\n",
       "Name: stalk-root, dtype: float64\n"
      ]
     }
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1276,7 @@
        "[8124 rows x 118 columns]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,13 +1310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('training.txt',index= False, header=False)\n",
-    "validate.to_csv('val.txt',index= False, header=False)\n",
-    "test.to_csv('testing.txt', index= False,header=False)\n"
+    "train.to_csv('training.txt', sep= \",\", index= False, header=False)\n",
+    "validate.to_csv('val.txt', sep= \",\", index= False, header=False)\n",
+    "test.to_csv('testing.txt', sep= \",\", index= False,header=False)\n"
    ]
   },
   {
